--- a/newtons_law.ipynb
+++ b/newtons_law.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1de08b28",
+   "id": "f50ebbfc",
    "metadata": {},
    "source": [
     "Mathematically, this is equivalent to saying that if the net force on an object is zero, then the velocity of the object is constant."
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23ab31c",
+   "id": "f87decad",
    "metadata": {},
    "source": [
     "$$ F = m\\frac{dv}{dt} = 0 \\quad \\rightarrow \\quad v = \\text{constant.} $$"
@@ -66,7 +66,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99774361",
+   "id": "60b6c504",
+   "metadata": {},
+   "source": [
+    "### Related Problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89dfd6a9",
+   "metadata": {},
+   "source": [
+    "- GRE Physics GR1777: Problem [001](https://study-astrophysics.com/gr1777-001/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "312db7d9",
    "metadata": {},
    "source": [
     "## Newton's Thrid Law (Action-reaction law)"
@@ -74,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dc53ebb",
+   "id": "7d61a666",
    "metadata": {},
    "source": []
   }
