--- a/newtons_law.ipynb
+++ b/newtons_law.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f50ebbfc",
+   "id": "221b986d",
    "metadata": {},
    "source": [
     "Mathematically, this is equivalent to saying that if the net force on an object is zero, then the velocity of the object is constant."
@@ -34,10 +34,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f87decad",
+   "id": "ac336dac",
    "metadata": {},
    "source": [
     "$$ F = m\\frac{dv}{dt} = 0 \\quad \\rightarrow \\quad v = \\text{constant.} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a17835bf",
+   "metadata": {},
+   "source": [
+    "### Related Problems"
    ]
   },
   {
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60b6c504",
+   "id": "c258958e",
    "metadata": {},
    "source": [
     "### Related Problems"
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89dfd6a9",
+   "id": "6077a4b0",
    "metadata": {},
    "source": [
     "- GRE Physics GR1777: Problem [001](https://study-astrophysics.com/gr1777-001/)"
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "312db7d9",
+   "id": "2b31fe3d",
    "metadata": {},
    "source": [
     "## Newton's Thrid Law (Action-reaction law)"
@@ -90,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d61a666",
+   "id": "a56bd3bc",
    "metadata": {},
    "source": []
   }
