--- a/ClassicalMechanics/newtons_law.ipynb
+++ b/ClassicalMechanics/newtons_law.ipynb
@@ -85,8 +85,7 @@
    "id": "6077a4b0",
    "metadata": {},
    "source": [
-    "- GRE Physics GR1777: Problem [001](https://study-astrophysics.com/gr1777-001/)\n",
-    "- "
+    "- GRE Physics GR1777: Problem [001](https://study-astrophysics.com/gr1777-001/)"
    ]
   },
   {
