--- a/ClassicalMechanics/momentum.ipynb
+++ b/ClassicalMechanics/momentum.ipynb
@@ -50,6 +50,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc66f6ff",
+   "metadata": {},
+   "source": [
+    "### Related Problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4be20a3d",
+   "metadata": {},
+   "source": [
+    "- GRE Physics GR1777: Problem [002](https://study-astrophysics.com/gr1777-002/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2482e851",
    "metadata": {},
    "source": [
