--- a/ClassicalMechanics/momentum.ipynb
+++ b/ClassicalMechanics/momentum.ipynb
@@ -5,7 +5,7 @@
    "id": "e76701ab",
    "metadata": {},
    "source": [
-    "# Momentum"
+    "# [Momentum](https://study-astrophysics.com/momentum/)"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "ece04775",
    "metadata": {},
    "source": [
-    "$$ p = m v $$"
+    "$$ \\vec{p} = m \\vec{v} $$"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "id": "270e1106",
    "metadata": {},
    "source": [
-    "If the velocities of the particles are $u_1$ and $u_2$ before the interaction, and afterwards they are $v_1$ and $v_2$, then"
+    "If the velocities of the particles are $\\vec{u_1}$ and $\\vec{u_2}$ before the interaction, and afterwards they are $\\vec{v_1}$ and $\\vec{v_2}$, then"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "id": "8c6e7fbb",
    "metadata": {},
    "source": [
-    "$$ m_1u_1 + m_2u_2 = m_1v_1 + m_2v_2 $$"
+    "$$ m_1\\vec{u_1} + m_2\\vec{u_2} = m_1\\vec{v_1} + m_2\\vec{v_2} $$"
    ]
   },
   {
