add vector notations

--- a/ClassicalMechanics/newtons_law.ipynb
+++ b/ClassicalMechanics/newtons_law.ipynb
@@ -37,7 +37,7 @@
    "id": "ac336dac",
    "metadata": {},
    "source": [
-    "$$ F = m\\frac{dv}{dt} = 0 \\quad \\rightarrow \\quad v = \\text{constant.} $$"
+    "$$ \\vec{F} = m\\frac{d\\vec{v}}{dt} = 0 \\quad \\rightarrow \\quad \\vec{v} = \\text{constant.} $$"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "id": "8b2ed137",
    "metadata": {},
    "source": [
-    "$$ F = ma $$"
+    "$$ \\vec{F} = m\\vec{a} $$"
    ]
   },
   {
