fix block notations

--- a/ClassicalMechanics/newtons_law.ipynb
+++ b/ClassicalMechanics/newtons_law.ipynb
@@ -13,30 +13,12 @@
    "id": "d4b41816",
    "metadata": {},
    "source": [
-    "## Newton's First Law (Inertia)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "56d9a807",
-   "metadata": {},
-   "source": [
-    "An object at rest will stay at rest, and an object in motion will stay in motion unless acted on by a net force."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "221b986d",
-   "metadata": {},
-   "source": [
-    "Mathematically, this is equivalent to saying that if the net force on an object is zero, then the velocity of the object is constant."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ac336dac",
-   "metadata": {},
-   "source": [
+    "## Newton's First Law (Inertia)\n",
+    "\n",
+    "An object at rest will stay at rest, and an object in motion will stay in motion unless acted on by a net force.\n",
+    "\n",
+    "Mathematically, this is equivalent to saying that if the net force on an object is zero, then the velocity of the object is constant.\n",
+    "\n",
     "$$ \\vec{F} = m\\frac{d\\vec{v}}{dt} = 0 \\quad \\rightarrow \\quad \\vec{v} = \\text{constant.} $$"
    ]
   },
@@ -53,22 +35,10 @@
    "id": "58727bc2",
    "metadata": {},
    "source": [
-    "## Newton's Seond Law"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de18b769",
-   "metadata": {},
-   "source": [
-    "The rate of change of momentum of a body over time is directly proportional to the force applied, and occurs in the same direction as the applied force."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8b2ed137",
-   "metadata": {},
-   "source": [
+    "## Newton's Seond Law\n",
+    "\n",
+    "The rate of change of momentum of a body over time is directly proportional to the force applied, and occurs in the same direction as the applied force.\n",
+    "\n",
     "$$ \\vec{F} = m\\vec{a} $$"
    ]
   },
@@ -77,14 +47,8 @@
    "id": "c258958e",
    "metadata": {},
    "source": [
-    "### Related Problems"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6077a4b0",
-   "metadata": {},
-   "source": [
+    "### Related Problems\n",
+    "\n",
     "- GRE Physics GR1777: Problem [001](https://study-astrophysics.com/gr1777-001/)"
    ]
   },
