--- a/ClassicalMechanics/work.ipynb
+++ b/ClassicalMechanics/work.ipynb
@@ -13,14 +13,8 @@
    "id": "fd4cb2bb",
    "metadata": {},
    "source": [
-    "## Work-Energy Principle"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "381196f6",
-   "metadata": {},
-   "source": [
+    "## Work-Energy Principle\n",
+    "\n",
     "$$ W = \\Delta E_k = \\Delta\\frac{1}{2}mv^2 $$"
    ]
   },
@@ -29,20 +23,14 @@
    "id": "ca56146e",
    "metadata": {},
    "source": [
-    "### Related Problems"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "63264b24",
-   "metadata": {},
-   "source": [
+    "### Related Problems\n",
+    "\n",
     "- GRE Physics GR1777: Problem [002](https://study-astrophysics.com/gr1777-002/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e66f8a81",
+   "id": "a8ab5385",
    "metadata": {},
    "source": []
   }
