--- a/ClassicalMechanics/momentum.ipynb
+++ b/ClassicalMechanics/momentum.ipynb
@@ -13,14 +13,8 @@
    "id": "90744cda",
    "metadata": {},
    "source": [
-    "## Linear Momentum"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ece04775",
-   "metadata": {},
-   "source": [
+    "## Linear Momentum\n",
+    "\n",
     "$$ \\vec{p} = m \\vec{v} $$"
    ]
   },
@@ -29,22 +23,10 @@
    "id": "4896cb95",
    "metadata": {},
    "source": [
-    "### Linear Momentum Conservation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "270e1106",
-   "metadata": {},
-   "source": [
-    "If the velocities of the particles are $\\vec{u_1}$ and $\\vec{u_2}$ before the interaction, and afterwards they are $\\vec{v_1}$ and $\\vec{v_2}$, then"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8c6e7fbb",
-   "metadata": {},
-   "source": [
+    "### Linear Momentum Conservation\n",
+    "\n",
+    "If the velocities of the particles are $\\vec{u_1}$ and $\\vec{u_2}$ before the interaction, and afterwards they are $\\vec{v_1}$ and $\\vec{v_2}$, then\n",
+    "\n",
     "$$ m_1\\vec{u_1} + m_2\\vec{u_2} = m_1\\vec{v_1} + m_2\\vec{v_2} $$"
    ]
   },
@@ -53,14 +35,8 @@
    "id": "bc66f6ff",
    "metadata": {},
    "source": [
-    "### Related Problems"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4be20a3d",
-   "metadata": {},
-   "source": [
+    "### Related Problems\n",
+    "\n",
     "- GRE Physics GR1777: Problem [002](https://study-astrophysics.com/gr1777-002/)"
    ]
   },
