remove angular momentum part

--- a/ClassicalMechanics/momentum.ipynb
+++ b/ClassicalMechanics/momentum.ipynb
@@ -27,45 +27,20 @@
     "\n",
     "If the velocities of the particles are $\\vec{u_1}$ and $\\vec{u_2}$ before the interaction, and afterwards they are $\\vec{v_1}$ and $\\vec{v_2}$, then\n",
     "\n",
-    "$$ m_1\\vec{u_1} + m_2\\vec{u_2} = m_1\\vec{v_1} + m_2\\vec{v_2} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc66f6ff",
-   "metadata": {},
-   "source": [
+    "$$ m_1\\vec{u_1} + m_2\\vec{u_2} = m_1\\vec{v_1} + m_2\\vec{v_2} $$\n",
+    "\n",
+    "\n",
     "### Related Problems\n",
     "\n",
     "- GRE Physics GR1777: Problem [002](https://study-astrophysics.com/gr1777-002/)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2482e851",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06e043d3",
    "metadata": {},
-   "source": [
-    "## Angular Momentum"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da4db8be",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fe6ada45",
-   "metadata": {},
-   "source": [
-    "### Angular Momentum Conservation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3a69daae",
-   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
