add more examples

--- a/ClassicalMechanics/oscillations.ipynb
+++ b/ClassicalMechanics/oscillations.ipynb
@@ -23,31 +23,49 @@
    "id": "4d6c3ef3",
    "metadata": {},
    "source": [
-    "- Period of a simple pendulum\n",
+    "## Simple Pendulum\n",
     "\n",
-    "$$ T = 2\\pi \\sqrt{\\frac{L}{g}} $$\n",
     "\n",
-    "where $L$ is the length of the pendulum and $g$ is the acceleration of gravity.\n",
+    "### Angular Frequency\n",
     "\n",
-    "Note that $\\color{red}{\\text{the period of a pendulum is independent of mass.}}$"
+    "$$ \\large \\omega = \\sqrt{\\frac{g}{L}} $$\n",
+    "\n",
+    "where \n",
+    "\n",
+    "$L$: length of the pendulum\n",
+    "\n",
+    "$g$: acceleration of gravity\n",
+    "\n",
+    "\n",
+    "### Period\n",
+    "\n",
+    "$$ \\large T = 2\\pi \\sqrt{\\frac{L}{g}} $$\n",
+    "\n",
+    "Note that the period of a pendulum is independent of mass.\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [003](https://study-astrophysics.com/gr1777-003/)\n",
+    "- GRE Physics GR0877 Problem 059"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "510ebd3f",
+   "id": "f10d8f96",
    "metadata": {},
    "source": [
-    "### Related Problems\n",
-    "- GRE Physics GR1777: Problem [003](https://study-astrophysics.com/gr1777-003/)"
+    "## Spring\n",
+    "\n",
+    "\n",
+    "### Angluar Frequency\n",
+    "\n",
+    "$$ \\large \\omega = \\sqrt{\\frac{k}{m}} $$\n",
+    "\n",
+    "\n",
+    "### Period\n",
+    "\n",
+    "$$ \\large T = 2\\pi \\sqrt{\\frac{m}{k}} $$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1653fa31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
