--- a/ClassicalMechanics/rotation.ipynb
+++ b/ClassicalMechanics/rotation.ipynb
@@ -15,9 +15,13 @@
    "source": [
     "## Centripetal Force\n",
     "\n",
-    "$$ F = ma = \\frac{mv^2}{r^2} = mr\\omega^2 $$\n",
+    "$$ \\large F = ma = \\frac{mv^2}{r^2} = mr\\omega^2 $$\n",
     "\n",
-    "where $v = \\omega r$, and $\\omega$ is the angular velocity.\n",
+    "where \n",
+    "\n",
+    "$v = \\omega r$\n",
+    "\n",
+    "$\\omega$: angular velocity.\n",
     "\n",
     "### Centrifugal Force"
    ]
@@ -43,7 +47,9 @@
     "\n",
     "$$ E_\\text{rot} = \\frac{1}{2} I \\omega^2 $$\n",
     "\n",
-    "where $I$ is the moment of inertia."
+    "where \n",
+    "\n",
+    "$I$: moment of inertia."
    ]
   },
   {
@@ -74,12 +80,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de73be14",
+   "cell_type": "markdown",
+   "id": "813fc336",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Rotation Matrix\n",
+    "\n",
+    "Rotation about z-axis of a coordinate system by an angle of $\\theta$.\n",
+    "\n",
+    "$$ \\large R_z = \\begin{bmatrix}\n",
+    "\\cos\\theta & -\\sin\\theta & 0 \\\\\n",
+    "\\sin\\theta & \\cos\\theta & 0 \\\\\n",
+    "0 & 0 & 1\n",
+    "\\end{bmatrix} $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "\n",
+    "- GRE Physics GR0177 Problem 075\n"
+   ]
   }
  ],
  "metadata": {
