--- a/ClassicalMechanics/oscillations.ipynb
+++ b/ClassicalMechanics/oscillations.ipynb
@@ -13,9 +13,9 @@
    "id": "d39b1bd3",
    "metadata": {},
    "source": [
-    "- Angular frequency ($\\omega$) and period ($T$)\n",
+    "### Angular frequency ($\\omega$) and period ( $T$)\n",
     "\n",
-    "$$ \\omega = \\frac{2 \\pi}{T} $$"
+    "$$ \\large \\omega = \\frac{2 \\pi}{T} $$"
    ]
   },
   {
@@ -64,7 +64,28 @@
     "\n",
     "### Period\n",
     "\n",
-    "$$ \\large T = 2\\pi \\sqrt{\\frac{m}{k}} $$"
+    "$$ \\large T = 2\\pi \\sqrt{\\frac{m}{k}} $$\n",
+    "\n",
+    "\n",
+    "### Potential Energy\n",
+    "\n",
+    "$$ \\large E = \\frac{1}{2} k x^2 $$\n",
+    "\n",
+    "\n",
+    "### Spring Constant\n",
+    "\n",
+    "#### Serial Connection \n",
+    "\n",
+    "$$ \\frac{1}{k_\\text{eff}} = \\frac{1}{k_1} + \\frac{1}{k_2} $$\n",
+    "\n",
+    "\n",
+    "#### Parallel Connection \n",
+    "\n",
+    "$$ k_\\text{eff} = k_1 + k_2 $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR0177 Problem 090"
    ]
   }
  ],
