add more contents

--- a/QuantumMechanics/operators.ipynb
+++ b/QuantumMechanics/operators.ipynb
@@ -19,12 +19,105 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0179583c",
+   "cell_type": "markdown",
+   "id": "a8d30645",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Hamiltonian Operator\n",
+    "\n",
+    "\n",
+    "$$ \\large \\hat{H} = \\frac{\\hat{p}^2}{2m} + V(\\hat{x}) $$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "abbd4c48",
+   "metadata": {},
+   "source": [
+    "## Pauli Spin Matrix\n",
+    "\n",
+    "\n",
+    "$$ \\large \\sigma_x = \\begin{pmatrix}\n",
+    "0 & 1 \\\\\n",
+    "1 & 0\n",
+    "\\end{pmatrix} $$\n",
+    "\n",
+    "$$ \\large \\sigma_y = \\begin{pmatrix}\n",
+    "0 & -i \\\\\n",
+    "i & 0\n",
+    "\\end{pmatrix} $$\n",
+    "\n",
+    "$$ \\large \\sigma_z = \\begin{pmatrix}\n",
+    "1 & 0 \\\\\n",
+    "0 & -1\n",
+    "\\end{pmatrix} $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR0877 Problem 087"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6312a177",
+   "metadata": {},
+   "source": [
+    "## Angular Momentum Operator\n",
+    "\n",
+    "$$ \\large [J_x, J_y] = i \\hbar J_z $$\n",
+    "\n",
+    "$$ \\large [J_y, J_z] = i \\hbar J_x $$\n",
+    "\n",
+    "$$ \\large [J_z, J_x] = i \\hbar J_y $$\n",
+    "\n",
+    "Cyclic order\n",
+    "\n",
+    "\n",
+    "## Related Problems\n",
+    "- GRE Physics GR0877 Problem 095"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f504b6d3",
+   "metadata": {},
+   "source": [
+    "## Useful Properties\n",
+    "\n",
+    "Orthogonal (Perpendicular) = Independent\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR0177 Problem 028"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9607674e",
+   "metadata": {},
+   "source": [
+    "## Useful Formula\n",
+    "\n",
+    "$$ \\large [AB, C] = A[B,C] + [A,C]B $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR0177 Problem 043"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76721842",
+   "metadata": {},
+   "source": [
+    "## Eigenvalue\n",
+    "\n",
+    "\n",
+    "$$ \\large \\det (A-\\lambda I) = 0 $$\n",
+    "\n",
+    "- Eigenvalues of the Hamiltonian operators are always **real**."
+   ]
   }
  ],
  "metadata": {
