add more descriptions

--- a/QuantumMechanics/bohr_model.ipynb
+++ b/QuantumMechanics/bohr_model.ipynb
@@ -13,7 +13,9 @@
    "id": "1893a3a0",
    "metadata": {},
    "source": [
-    "## 1."
+    "## 1.\n",
+    "\n",
+    "$$ \\large \\frac{m_e v^2}{r} = \\frac{1}{4 \\pi \\epsilon_0} \\frac{Z e^2}{r^2} $$"
    ]
   },
   {
@@ -21,7 +23,11 @@
    "id": "6cdc2f5c",
    "metadata": {},
    "source": [
-    "## 2."
+    "## 2.\n",
+    "\n",
+    "$$ \\large L = n \\frac{h}{2 \\pi} = n\\hbar = mvr_n  \\quad \\text{: angular momentum} $$\n",
+    "\n",
+    "$$ \\large mv = \\frac{n\\hbar}{r_n} \\quad \\text{: linear momentum} $$"
    ]
   },
   {
@@ -29,7 +35,36 @@
    "id": "df099879",
    "metadata": {},
    "source": [
-    "## 3."
+    "## 3.\n",
+    "\n",
+    "$$ \\large \\Delta E = E_2 - E_1 = h \\nu $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32e2f1d4",
+   "metadata": {},
+   "source": [
+    "## Bohr Radius\n",
+    "\n",
+    "$$ \\large a_0 = \\frac{4 \\pi \\epsilon_0 \\hbar^2}{m_e e^2} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "799330b2",
+   "metadata": {},
+   "source": [
+    "## Bohr Energy\n",
+    "\n",
+    "$$ \\large E_n = - \\frac{m_e e^4}{n^2 \\hbar^2 2 (4 \\pi \\epsilon_0)^2} $$\n",
+    "\n",
+    "\n",
+    "### Useful Properties\n",
+    "\n",
+    "$$ \\large \\frac{E_\\mu}{E_e} \\propto \\frac{\\mu_\\mu}{\\mu_e} $$\n",
+    "\n",
+    "$$ \\large \\text{energy} \\propto \\text{reduced mass} $$"
    ]
   }
  ],
