--- a/Optics/geometric_optics.ipynb
+++ b/Optics/geometric_optics.ipynb
@@ -27,22 +27,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30d8c4f0",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9efa270",
+   "id": "aaa857f9",
    "metadata": {},
    "source": [
-    "## Lens Maker's Equation\n",
+    "## Lensmaker's Equation\n",
     "\n",
-    "$$ \\large \\frac{1}{f} = (n-1)\\left( \\frac{1}{R_1} - \\frac{1}{R_2} \\right) $$\n",
+    "$$ \\large \\frac{1}{f} = (n-1) \\left( \\frac{1}{R_1} - \\frac{1}{R_2} \\right) $$\n",
     "\n",
-    "### Sign\n",
-    "+: right\n",
-    "-: left"
+    "\n",
+    "where\n",
+    "\n",
+    "$f$: focal length of the lens,\n",
+    "\n",
+    "$n$: refractive index of the lens material,\n",
+    "\n",
+    "$R_{1}$: radius of curvature (with sign, see below) of the lens surface closer to the light source,\n",
+    "\n",
+    "$R_{2}$: radius of curvature of the lens surface farther from the light source."
    ]
   }
  ],
