--- a/Electrodynamics/capacitor.ipynb
+++ b/Electrodynamics/capacitor.ipynb
@@ -1,12 +1,45 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01d98a1a",
+   "cell_type": "markdown",
+   "id": "0199d7f6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Capacitors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3fd9c9c",
+   "metadata": {},
+   "source": [
+    "## Capacity\n",
+    "\n",
+    "$$ \\large C = \\frac{\\epsilon A}{d} = \\frac{k \\epsilon}{d} $$\n",
+    "\n",
+    "\n",
+    "## Energy\n",
+    "\n",
+    "$$ \\large E = \\frac{\\sigma}{\\epsilon} = \\frac{Q}{\\epsilon d} = \\frac{V}{d} $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR0877: Problem 093"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcc7e935",
+   "metadata": {},
+   "source": [
+    "## Permittivity\n",
+    "\n",
+    "$$ \\large \\kappa \\epsilon_0 = \\epsilon $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR0177: Problem 095"
+   ]
   }
  ],
  "metadata": {
