add a dye laser description

--- a/Optics/laser.ipynb
+++ b/Optics/laser.ipynb
@@ -21,6 +21,19 @@
     "- Gas laser: free atom\n",
     "- Solid-state laser: solid"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7155bf3",
+   "metadata": {},
+   "source": [
+    "## Dye Laser\n",
+    "\n",
+    "A dye laser can usually be used for a much wider range of wavelengths, often spanning 50 to 100 nanometers or more. The wide bandwidth makes them particularly suitable for tunable lasers and pulsed lasers. For instance, the dye rhodamine 6G can be tuned from 635 nm (orangish-red) to 560 nm (greenish-yellow), which is the visible wavelengths.\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [033](https://study-astrophysics.com/gr1777-033/)"
+   ]
   }
  ],
  "metadata": {
