add a related problem
GR1777 035

--- a/Relativity/time_dilation.ipynb
+++ b/Relativity/time_dilation.ipynb
@@ -5,7 +5,7 @@
    "id": "8e5ecc5d",
    "metadata": {},
    "source": [
-    "# Time Dilation"
+    "# [Time Dilation](https://study-astrophysics.com/time-dilation/)"
    ]
   },
   {
@@ -13,7 +13,10 @@
    "id": "31e290ea",
    "metadata": {},
    "source": [
-    "$$ \\large t = \\frac{t_0}{\\sqrt{1-(v/c)^2}} $$"
+    "$$ \\large t = \\frac{t_0}{\\sqrt{1-(v/c)^2}} $$\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [035](https://study-astrophysics.com/gr1777-035/)"
    ]
   },
   {
