add a related problem
GR1777 034

--- a/Relativity/length_contraction.ipynb
+++ b/Relativity/length_contraction.ipynb
@@ -5,7 +5,7 @@
    "id": "30b08d76",
    "metadata": {},
    "source": [
-    "# Length Contraction"
+    "# [Length Contraction](https://study-astrophysics.com/length-contraction/)"
    ]
   },
   {
@@ -13,7 +13,10 @@
    "id": "a16d53ba",
    "metadata": {},
    "source": [
-    "$$ \\large L = L_0 \\sqrt{1-(v/c)^2} $$"
+    "$$ \\large L = L_0 \\sqrt{1-(v/c)^2} $$\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [034](https://study-astrophysics.com/gr1777-034/)"
    ]
   }
  ],
