add description and related problem

--- a/Relativity/relativistic_energy.ipynb
+++ b/Relativity/relativistic_energy.ipynb
@@ -5,7 +5,7 @@
    "id": "974487c2",
    "metadata": {},
    "source": [
-    "# Relativistic Energy"
+    "# [Relativistic Energy](https://study-astrophysics.com/relativistic-energy/)"
    ]
   },
   {
@@ -13,9 +13,23 @@
    "id": "0df5d802",
    "metadata": {},
    "source": [
-    "## Total Energy\n",
+    "## Energy-momentum Relation\n",
     "\n",
-    "$$ \\large E^2 = (pc)^2 + (mc^2)^2 $$"
+    "$$ \\large E^2 = (pc)^2 + (mc^2)^2 $$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$E$: total energy (relativistic energy)\n",
+    "\n",
+    "$p$: momentum of magnitude\n",
+    "\n",
+    "$m$: rest mass (invariant mass)\n",
+    "\n",
+    "$c$: speed of light\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [036](https://study-astrophysics.com/gr1777-036/)"
    ]
   },
   {
@@ -26,7 +40,7 @@
     "## Kinetic Energy\n",
     "\n",
     "$$ \\large \\begin{split} \n",
-    "K.E. & = \\gamma mc^2 - mc^2 \\\\\n",
+    "\\text{(Kinetic Energy)} & = \\gamma mc^2 - mc^2 \\\\\n",
     " & = (\\gamma - 1)mc^2\n",
     "\\end{split} $$\n",
     "\n",
@@ -36,7 +50,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777: Problem 085"
+    "- GRE Physics GR1777 Problem 085"
    ]
   }
  ],
