add links and descriptions

--- a/Electrodynamics/electrical_energy.ipynb
+++ b/Electrodynamics/electrical_energy.ipynb
@@ -5,7 +5,21 @@
    "id": "9b8498c3",
    "metadata": {},
    "source": [
-    "# Electrical Energy"
+    "# [Electrical Energy (Work)](https://study-astrophysics.com/electrical-energy/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e6c41d2",
+   "metadata": {},
+   "source": [
+    "## For a Point Charge\n",
+    "\n",
+    "$$ \\large W = \\Delta U = q \\Delta V \\quad \\left(= \\frac{1}{2} m v^2 \\right) $$\n",
+    "\n",
+    "Thus,\n",
+    "\n",
+    "$$ \\large \\Rightarrow \\quad v = \\sqrt{\\frac{2qV}{m}} $$"
    ]
   },
   {
@@ -41,7 +55,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -55,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
