--- a/Electrodynamics/electric_potential.ipynb
+++ b/Electrodynamics/electric_potential.ipynb
@@ -5,7 +5,7 @@
    "id": "3de3bfbd",
    "metadata": {},
    "source": [
-    "# Electric Potential (and Work)"
+    "# [Electric Potential (and Work)](https://study-astrophysics.com/electric-potential/)"
    ]
   },
   {
@@ -17,19 +17,17 @@
     "\n",
     "$$ \\large V = \\frac{1}{4 \\pi \\epsilon_0} \\frac{Q}{r} $$\n",
     "\n",
+    "where \n",
     "\n",
-    "## and work\n",
+    "$Q$: point charge\n",
     "\n",
-    "$$ \\large W = \\Delta U = q \\Delta V \\quad \\left(= \\frac{1}{2} m v^2 \\right) $$\n",
-    "\n",
-    "Thus,\n",
-    "\n",
-    "$$ \\large \\Rightarrow \\quad v = \\sqrt{\\frac{2qV}{m}} $$\n",
+    "$r$: distance\n",
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0877: Problem 090\n",
-    "- GRE Physics GR0177: Problem 058"
+    "- GRE Physics GR1777 Problem [038](https://study-astrophysics.com/gr1777-038/)\n",
+    "- GRE Physics GR0877 Problem 090\n",
+    "- GRE Physics GR0177 Problem 058"
    ]
   },
   {
@@ -41,13 +39,17 @@
     "\n",
     "$$ \\large V = \\text{constant} $$\n",
     "\n",
-    "$$ \\large E = 0 \\quad (\\because E = - \\nabla V ) $$"
+    "$$ \\large E = 0 \\quad (\\because E = - \\nabla V ) $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [038](https://study-astrophysics.com/gr1777-038/)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -61,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
