add links and descriptions

--- a/Electrodynamics/electric_field.ipynb
+++ b/Electrodynamics/electric_field.ipynb
@@ -5,7 +5,7 @@
    "id": "da9ec6bc",
    "metadata": {},
    "source": [
-    "# Electric Field"
+    "# [Electric Field](https://study-astrophysics.com/electric-field/)"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "58ab24c9",
    "metadata": {},
    "source": [
-    "$$ \\large E = \\frac{1}{4 \\pi \\epsilon_0} \\frac{q_1 q_2}{r^2} $$"
+    "$$ \\large \\vec{E} = \\frac{1}{4 \\pi \\epsilon_0} \\frac{q}{r^2}\\hat{r} $$"
    ]
   },
   {
@@ -38,7 +38,20 @@
    "source": [
     "## Electric Flux\n",
     "\n",
-    "$$ \\large \\Phi_E = \\int_S \\vec{E} \\cdot d \\vec{a} $$"
+    "$$ \\large \\Phi_E = \\int_S \\vec{E} \\cdot d \\vec{a} $$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$ \\Phi_E$: electric flux through a closed surface $S$ enclosing any volume $V$\n",
+    "\n",
+    "$Q_\\text{enc}$: total charge enclosed within $V$\n",
+    "\n",
+    "$\\epsilon_0$: electric constant\n",
+    "\n",
+    "\n",
+    "### Related Topics\n",
+    "\n",
+    "[Gauss's Law](https://study-astrophysics.com/gausss-law/)"
    ]
   }
  ],
