--- a/Electrodynamics/gauss_law.ipynb
+++ b/Electrodynamics/gauss_law.ipynb
@@ -5,7 +5,7 @@
    "id": "0f198b15",
    "metadata": {},
    "source": [
-    "# Gauss's Law"
+    "# [Gauss's Law](https://study-astrophysics.com/gausss-law/)"
    ]
   },
   {
