--- a/Electrodynamics/ac_circuit.ipynb
+++ b/Electrodynamics/ac_circuit.ipynb
@@ -5,7 +5,7 @@
    "id": "990da474",
    "metadata": {},
    "source": [
-    "# AC Circuit"
+    "# [AC Circuit](https://study-astrophysics.com/ac-circuit/)"
    ]
   },
   {
@@ -38,7 +38,20 @@
    "source": [
     "## Output Voltage\n",
     "\n",
-    "$$ \\large V_0 = I Z_C $$"
+    "$$ \\large V_{\\text{rms}} = I_{\\text{rms}} Z $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84e031dc",
+   "metadata": {},
+   "source": [
+    "## Power Dissipated\n",
+    "\n",
+    "$$ \\large \\begin{split} P & = V_{\\text{rms}} \\ I_{\\text{rms}} \\cos \\phi \\\\ \n",
+    "& = I^2_{\\text{rms}} Z \\cos \\phi \\\\\n",
+    "& = I^2_{\\text{rms}} R\n",
+    "\\end{split}$$"
    ]
   },
   {
@@ -47,7 +60,8 @@
    "metadata": {},
    "source": [
     "### Related Problems\n",
-    "- GRE Physics GR0877: Problem 070"
+    "- GRE Physics GR0877 Problem 070\n",
+    "- GRE Physics GR1777 Problem [040](https://study-astrophysics.com/gr1777-040/)"
    ]
   }
  ],
