--- a/Electrodynamics/rlc_circuit.ipynb
+++ b/Electrodynamics/rlc_circuit.ipynb
@@ -5,7 +5,7 @@
    "id": "dca97e1f",
    "metadata": {},
    "source": [
-    "# RLC Circuit"
+    "# [RLC Circuit](https://study-astrophysics.com/rlc-circuit/)"
    ]
   },
   {
