fix minor issue

--- a/Electrodynamics/electric_field.ipynb
+++ b/Electrodynamics/electric_field.ipynb
@@ -24,9 +24,14 @@
     "## In a Capacitor\n",
     "\n",
     "\n",
-    "$$ \\large E = \\frac{\\sigma}{\\epsilon_0} = \\frac{Q}{\\epsilon_0 S} \\quad \\Rightarrow \\quad \\frac{dE}{dt} = \\frac{I}{\\epsilon_0 S} $$\n",
-    "\n",
-    "\n",
+    "$$ \\large E = \\frac{\\sigma}{\\epsilon_0} = \\frac{Q}{\\epsilon_0 S} \\quad \\Rightarrow \\quad \\frac{dE}{dt} = \\frac{I}{\\epsilon_0 S} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2dcb635",
+   "metadata": {},
+   "source": [
     "### Related Problems\n",
     "- GRE Physics GR0877: Problem 067"
    ]
@@ -46,9 +51,14 @@
     "\n",
     "$Q_\\text{enc}$: total charge enclosed within $V$\n",
     "\n",
-    "$\\epsilon_0$: electric constant\n",
-    "\n",
-    "\n",
+    "$\\epsilon_0$: electric constant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4169fce4",
+   "metadata": {},
+   "source": [
     "### Related Topics\n",
     "\n",
     "[Gauss's Law](https://study-astrophysics.com/gausss-law/)"
