add some more info

--- a/Astrophysics/bondi_accretion.ipynb
+++ b/Astrophysics/bondi_accretion.ipynb
@@ -43,7 +43,7 @@
    "id": "6f25ad7c",
    "metadata": {},
    "source": [
-    "- $\\dot{m}$ at given ambient condition\n",
+    "- mass accretion rate $\\dot{m}$ at given ambient condition\n",
     " - $\\rho_\\infty$\n",
     " - $c_\\infty$\n",
     "- How big a region is affected\n",
