--- a/Git/gitignore.ipynb
+++ b/Git/gitignore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "05485c9a",
+   "id": "04257264",
    "metadata": {},
    "source": [
     "# How to ignore specific file extensions in Git"
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f60f9a3f",
+   "id": "4ade3961",
    "metadata": {},
    "source": [
-    "## Background"
+    "## Situation"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "03c00b2a",
+   "id": "7efaa627",
    "metadata": {},
    "source": [
     "In my case, I use to upload my ipython notebook in my GitHub repository, but I do not want to commit the ckeckpoint files. In that case, how should I do that?"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "295fda8a",
+   "id": "334050f2",
    "metadata": {},
    "source": [
     "## Add the file extention in .gitignore"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48beabde",
+   "id": "d70ed067",
    "metadata": {},
    "source": [
     "In ```.gitignore```, add the name of the extension you don't want to commit.\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4435709f",
+   "id": "02419c08",
    "metadata": {},
    "source": [
     "## Add the file extention in /.git/info/exclude"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea39786a",
+   "id": "80432fb0",
    "metadata": {},
    "source": [
     "In ```/.git/info/exclude```, add the name of the extension you don't want to commit.\n",
