--- a/LaTeX/underbrace.ipynb
+++ b/LaTeX/underbrace.ipynb
@@ -13,7 +13,7 @@
    "id": "d770909f",
    "metadata": {},
    "source": [
-    "## Objectives"
+    "## Situation"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "14c9dfa2",
    "metadata": {},
    "source": [
-    "- Put extra information in the equation"
+    "- I want to put extra information (text) in the equation"
    ]
   },
   {
