add more contents

--- a/Astrophysics/bondi_accretion.ipynb
+++ b/Astrophysics/bondi_accretion.ipynb
@@ -21,7 +21,7 @@
    "id": "4d15ef1e",
    "metadata": {},
    "source": [
-    "- Isolated star/planet\n",
+    "- Isolated star/planet/compack object\n",
     "- Neglect\n",
     " - magnetic field\n",
     " - rotation (angular momentum)\n",
@@ -71,7 +71,7 @@
    "id": "c2498e8d",
    "metadata": {},
    "source": [
-    "$$ \\large \\frac{\\partial \\rho}{\\partial r} + \\nabla \\cdot \\rho v = 0 $$"
+    "$$  \\large \\frac{\\partial \\rho}{\\partial r} + \\nabla \\cdot \\rho v = 0 $$"
    ]
   },
   {
@@ -132,22 +132,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f19ad10",
-   "metadata": {},
-   "source": [
-    "The pressure term can be expressed as"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29abd40c",
-   "metadata": {},
-   "source": [
-    "$$ \\large \\frac{\\partial P}{\\partial r} = \\frac{\\partial P}{\\partial \\rho} \\frac{\\partial \\rho}{\\partial r} = c^2_s \\frac{\\partial \\rho}{\\partial r} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "74415f28",
    "metadata": {},
    "source": [
@@ -176,9 +160,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "32ff7048",
+   "metadata": {},
+   "source": [
+    "## Derivation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c16a075",
+   "metadata": {},
+   "source": [
+    "In the continuity equation,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81c7ceed",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\frac{\\partial}{\\partial r} (r^2 \\rho v) = \\rho \\frac{\\partial (r^2 v)}{\\partial r} + r^2 v \\frac{\\partial \\rho }{\\partial r} = 0 \\quad \\color{red}{\\text{But how?}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a48e70ca",
+   "metadata": {},
+   "source": [
+    "Thus,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e0d0408",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\frac{1}{\\rho} \\color{red}{\\frac{\\partial \\rho}{\\partial r}} = - \\frac{1}{r^2 v} \\frac{\\partial (r^2 v)}{\\partial r} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9434958b",
+   "metadata": {},
+   "source": [
+    "Also, the pressure term in Euler equation can be expressed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cc652b5",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\frac{\\partial P}{\\partial r} = \\frac{\\partial P}{\\partial \\rho} \\frac{\\partial \\rho}{\\partial r} = c^2_s \\color{red}{\\frac{\\partial \\rho}{\\partial r}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1636e18",
+   "metadata": {},
+   "source": [
+    "Thus, the continuity equation can be rewritten"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a22ce0b6",
+   "metadata": {},
+   "source": [
+    "$$ \\large v \\frac{\\partial v}{\\partial r} - \\frac{c^2_s}{r^2 v} \\frac{\\partial (r^2 v)}{\\partial r} + \\frac{GM}{r^2} = 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44e22722",
+   "metadata": {},
+   "source": [
+    "Since,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac3a24fa",
+   "metadata": {},
+   "source": [
+    "$$ \\large v \\color{blue}{\\frac{\\partial v}{\\partial r}}  = \\frac{1}{2} \\frac{\\partial v^2}{\\partial r} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "817eba1e",
+   "metadata": {},
+   "source": [
+    "$$ \\large \\frac{\\partial (r^2 v)}{\\partial r} = r^2 \\color{blue}{\\frac{\\partial v}{\\partial r}} + 2 v r = \\frac{1}{2} \\frac{r^2}{v} \\frac{\\partial v^2}{\\partial r} + 2 v r $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2194fe8d",
+   "metadata": {},
+   "source": [
+    "Therefore,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2c68970",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7fb2ca3",
+   "id": "97ac4eed",
    "metadata": {},
    "outputs": [],
    "source": []
