add another example: free energy

--- a/LaTeX/underbrace.ipynb
+++ b/LaTeX/underbrace.ipynb
@@ -21,7 +21,7 @@
    "id": "14c9dfa2",
    "metadata": {},
    "source": [
-    "- I want to put extra information (text) in the equation"
+    "- I want to put extra information (text) under the terms in an equation"
    ]
   },
   {
@@ -80,6 +80,48 @@
    "metadata": {},
    "source": [
     "$$ \\large \\underbrace{v \\frac{\\partial v}{\\partial r}}_{\\text{advection}} + \\underbrace{\\frac{1}{\\rho} \\frac{\\partial P}{\\partial r}}_{\\text{pressure}} + \\underbrace{\\frac{GM}{r^2}}_{\\text{gravity}} = 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec36c8ef",
+   "metadata": {},
+   "source": [
+    "## Example 2. Free energy in the presence of the external force"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "594902da",
+   "metadata": {},
+   "source": [
+    "### Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfbdbd42",
+   "metadata": {},
+   "source": [
+    "``` \\begin{equation}\n",
+    "\\large G_n \\rightarrow G_n + \\underbrace{Fna}_{\\text{external work}}\n",
+    "\\end{equation}```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "726fdac5",
+   "metadata": {},
+   "source": [
+    "### Output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e7c38a1",
+   "metadata": {},
+   "source": [
+    "$$ \\begin{equation} \\large G_n \\rightarrow G_n + \\underbrace{Fna}_{\\text{external work}} \\end{equation}$$"
    ]
   }
  ],
